# tinyrender

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: closegl.h  geometry.h
src/: closegl.cpp  geometry.cpp  model.cpp
